--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,35 @@
 # spring.datasource.password=tcet
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/programchair
-spring.datasource.username=postgres
-spring.datasource.password=Harsh123
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://dpg-d009hoc9c44c73ffgja0-a.oregon-postgres.render.com:5432/programchairdb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:programchairdb_user}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:2uaTUEnYY9qqGxlcVHRCbI00TGE1T7bv}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
+
+# Server Configuration
+server.port=${PORT:8080}
+
+# Enable CORS
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+
+# Production Settings
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.open-in-view=false
+
+# Logging Configuration (reduced for production)
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+
+# Security Headers
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
